--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -394,7 +394,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_test_start[0]"
+    "\n",
+    "class Rollout:\n",
+    "    def __init__(self,model,dataset_name: str,i: int,length):\n",
+    "        self.bc = np.load(f\"{os.getcwd()}\\\\Data\\\\raw\\\\{dataset_name}_BC.npy\",allow_pickle=True)[i]\n",
+    "        self.par_data = np.load(f\"{os.getcwd()}\\\\Data\\\\raw\\\\{dataset_name}_Data.npy\",allow_pickle=True)[i]\n",
+    "        self.model, self.dataset_name = model, dataset_name\n",
+    "        self.length = len(self.par_data)\n",
+    "        #\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.dataset_name} Rollout\"\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2Sphere Rollout'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rol1 = Rollout(GCONV_Model_RelPos(),\"2Sphere\",0)\n",
+    "str(rol1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [0, 2],\n",
+       "       [0, 3],\n",
+       "       [0, 4],\n",
+       "       [1, 5],\n",
+       "       [1, 6],\n",
+       "       [1, 7]], dtype=int32)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Encoding import load\n",
+    "data_start,data_agr,top_agr,bc_agr = load(file_name)\n",
+    "float_formatter = \"{:.2f}\".format\n",
+    "np.set_printoptions(precision=1)\n",
+    "print(rol1.bc.shape)\n",
+    "top_agr[0][0]"
    ]
   },
   {
