Saved numpy array changed to aggregated data not encoded aggregated data, started on new rollout

--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -38,9 +38,31 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 100, 2, 6)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Encoding import load\n",
+    "data_start,data_agr,top_agr,bc_agr = load(\"2Sphere\")\n",
+    "data_agr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from Encoding import GetEdgeIdx\n",
+    "from Encoding import GetEdgeIdx, Encoding\n",
     "class DEM_Dataset(InMemoryDataset):\n",
     "    def __init__(self,file_name: str,data_split,\n",
     "                 Dataset_type: Literal[\"train\",\"validate\",\"test\"],\n",
@@ -60,7 +82,8 @@
     "    @property \n",
     "    def raw_file_names(self):\n",
     "        return[f\"{self.file_name}_Data.npy\",\n",
-    "               f\"{self.file_name}_Topology.npy\"]\n",
+    "               f\"{self.file_name}_Topology.npy\",\n",
+    "               f\"{self.file_name}_BC.npy\"]\n",
     "    \n",
     "    @property\n",
     "    def processed_file_names(self):\n",
@@ -79,8 +102,9 @@
     "    \n",
     "    def process(self):\n",
     "            data_list = []\n",
-    "            simulations,topologies = [self.LoadSimTop(i) for i in [0,1]]\n",
-    "\n",
+    "            data_agr,top_agr,bc= [self.LoadSimTop(i) for i in [0,1,2]]\n",
+    "            simulations,topologies = Encoding(data_agr,top_agr,bc)\n",
+    "            \n",
     "            if self.pre_filter is not None:\n",
     "                simulations = self.pre_filter(simulations)\n",
     "\n",
@@ -108,7 +132,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing...\n",
+      "1700it [00:36, 46.59it/s]\n",
+      "Done!\n",
+      "c:\\Users\\Gebruiker\\anaconda3\\envs\\DEM-GNN\\Lib\\site-packages\\torch_geometric\\io\\fs.py:229: UserWarning: Weights only load failed. Please file an issue to make `torch.load(weights_only=True)` compatible in your case. Please use `torch.serialization.add_safe_globals([scalar])` to allowlist this global.\n",
+      "  warnings.warn(f\"{warn_msg} Please use \"\n",
+      "Processing...\n",
+      "200it [00:04, 47.57it/s]\n",
+      "Done!\n",
+      "Processing...\n",
+      "100it [00:02, 46.53it/s]\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "transform_norm = T.Compose([T.NormalizeScale(),T.Cartesian(False)])\n",
+    "transform_eq = T.Cartesian(False)\n",
+    "\n",
+    "file_name=\"2Sphere\"\n",
+    "data_split=[0.85, 0.95]\n",
+    "transform = transform_eq\n",
+    "\n",
+    "dataset_train     = DEM_Dataset(file_name, data_split,\"train\"   ,'delta', pre_transform=transform,force_reload=True)\n",
+    "dataset_val       = DEM_Dataset(file_name, data_split,\"validate\",'delta', pre_transform=transform,force_reload=True)\n",
+    "dataset_test      = DEM_Dataset(file_name, data_split,\"test\"    ,'delta', pre_transform=transform,force_reload=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,61 +297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing...\n",
-      "1700it [00:42, 39.76it/s]\n",
-      "Done!\n",
-      "c:\\Users\\Gebruiker\\anaconda3\\envs\\DEM-GNN\\Lib\\site-packages\\torch_geometric\\io\\fs.py:229: UserWarning: Weights only load failed. Please file an issue to make `torch.load(weights_only=True)` compatible in your case. Please use `torch.serialization.add_safe_globals([scalar])` to allowlist this global.\n",
-      "  warnings.warn(f\"{warn_msg} Please use \"\n",
-      "Processing...\n",
-      "200it [00:04, 40.49it/s]\n",
-      "Done!\n",
-      "Processing...\n",
-      "100it [00:02, 39.80it/s]\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "transform_norm = T.Compose([T.NormalizeScale(),T.Cartesian(False)])\n",
-    "transform_eq = T.Cartesian(False)\n",
-    "\n",
-    "file_name=\"2Sphere\"\n",
-    "data_split=[0.85, 0.95]\n",
-    "transform = transform_eq\n",
-    "\n",
-    "dataset_train     = DEM_Dataset(file_name, data_split,\"train\"   ,'delta', pre_transform=transform,force_reload=True)\n",
-    "dataset_val       = DEM_Dataset(file_name, data_split,\"validate\",'delta', pre_transform=transform,force_reload=True)\n",
-    "dataset_test      = DEM_Dataset(file_name, data_split,\"test\"    ,'delta', pre_transform=transform,force_reload=True)"
+    "dataset_train[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Device:  cuda\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Gebruiker\\anaconda3\\envs\\DEM-GNN\\Lib\\site-packages\\torch_geometric\\deprecation.py:26: UserWarning: 'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
-      "  warnings.warn(out)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = GCONV_Model_RelPos()\n",
     "trainer = Trainer(model, dataset_train,dataset_val,\n",
@@ -304,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,20 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Data(x=[8, 7], edge_index=[2, 8], y=[2, 3], pos=[8, 3], time=0, mask=[8], edge_attr=[8, 3])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_test_start[1]"
    ]
@@ -394,72 +400,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from Encoding import Encoding, ConstructTopology, EncodeNodes\n",
     "\n",
-    "class Rollout:\n",
-    "    def __init__(self,model,dataset_name: str,i: int,length):\n",
-    "        self.bc = np.load(f\"{os.getcwd()}\\\\Data\\\\raw\\\\{dataset_name}_BC.npy\",allow_pickle=True)[i]\n",
-    "        self.par_data = np.load(f\"{os.getcwd()}\\\\Data\\\\raw\\\\{dataset_name}_Data.npy\",allow_pickle=True)[i]\n",
+    "class LearnedSimulator:\n",
+    "    def __init__(self,model,dataset_name: str,bc_agr,data_agr,i: int,timesteps,):\n",
+    "        self.bc = bc_agr[i]\n",
+    "        self.par_data = data_agr[i]\n",
     "        self.model, self.dataset_name = model, dataset_name\n",
     "        self.length = len(self.par_data)\n",
-    "        #\n",
+    "        self.data_list = []\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return f\"{self.dataset_name} Rollout\"\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "\n"
+    "    @property\n",
+    "    def BCrollout(self):\n",
+    "        bc_rollout = []\n",
+    "        bc_t=np.copy(self.bc)\n",
+    "        for t in range(self.timesteps):\n",
+    "            bc_t[:,:3] = self.bc[:,:3]+(t+1)*self.bc[:,-3:] \n",
+    "            bc_rollout.append(bc_t)\n",
+    "        return bc_rollout\n",
+    "\n",
+    "    def Rollout(self):\n",
+    "        bc_rollout = self.BCrollout(self)\n",
+    "        for t in trange(self.timesteps)\n",
+    "            ConstructTopology(self.par_data,bc_rollout,self.tol)\n",
+    "            data_enc, top_enc =  Encoding(self.bc,top)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2Sphere Rollout'"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rol1 = Rollout(GCONV_Model_RelPos(),\"2Sphere\",0)\n",
-    "str(rol1)"
+    "rol1 = Rollout(GCONV_Model_RelPos(),\"2Sphere\",1,100)\n",
+    "rol1.i2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6, 9)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1],\n",
-       "       [0, 2],\n",
-       "       [0, 3],\n",
-       "       [0, 4],\n",
-       "       [1, 5],\n",
-       "       [1, 6],\n",
-       "       [1, 7]], dtype=int32)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Encoding import load\n",
     "data_start,data_agr,top_agr,bc_agr = load(file_name)\n",
