--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -38,28 +38,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2000, 100, 2, 6)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from Encoding import load\n",
-    "data_start,data_agr,top_agr,bc_agr = load(\"2Sphere\")\n",
-    "data_agr.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [],
    "source": [
     "from Encoding import GetEdgeIdx, Encoding\n",
@@ -99,57 +77,46 @@
     "        Daset_type_idx = {\"train\":0,\"validate\":1,\"test\":2}[self.Dataset_type]\n",
     "        splits=np.array(self.data_split)*data.shape[0]\n",
     "        return np.split(data,splits.astype(int))[Daset_type_idx]\n",
-    "    \n",
+    "\n",
     "    def process(self):\n",
-    "            data_list = []\n",
-    "            data_agr,top_agr,bc= [self.LoadSimTop(i) for i in [0,1,2]]\n",
-    "            simulations,topologies = Encoding(data_agr,top_agr,bc)\n",
+    "        data_list = []\n",
+    "        data_agr,top_agr,bc= [self.LoadSimTop(i) for i in [0,1,2]]\n",
+    "        simulations,topologies = Encoding(data_agr,top_agr,bc)\n",
     "            \n",
-    "            if self.pre_filter is not None:\n",
-    "                simulations = self.pre_filter(simulations)\n",
+    "        if self.pre_filter is not None:\n",
+    "            simulations = self.pre_filter(simulations)\n",
     "\n",
-    "            for sim, top in tqdm(zip(simulations,topologies)):\n",
-    "                  for t in np.arange(len(sim)-1):\n",
-    "                    real_idx = sim[t][:,-1:].squeeze().nonzero()\n",
-    "                    maskx = np.squeeze(sim[t][:,-1:]==1)\n",
-    "                    if t == 1: start = False\n",
-    "                    x = torch.tensor(sim[t],dtype=torch.float)\n",
-    "                    y_abs = torch.tensor(sim[t+1][real_idx,:3],dtype=torch.float).squeeze()\n",
-    "                    if self.mode == 'cart':\n",
-    "                        y=y_abs\n",
-    "                    if self.mode == 'delta':\n",
-    "                        y=y_abs-x[maskx,:3]\n",
-    "\n",
-    "                    edge_index = GetEdgeIdx(top[t],real_idx) \n",
-    "                    data = Data(pos=x[:,:3],x=x[:,3:],y=y,edge_index=edge_index,mask=maskx,time=t)\n",
-    "                    data_list.append(data)\n",
-    "\n",
-    "            if self.pre_transform is not None:\n",
-    "                data_list = [self.pre_transform(data) for data in data_list]        \n",
+    "        for sim, top in tqdm(zip(simulations,topologies)):\n",
+    "            for t in np.arange(len(sim)-1):\n",
+    "                real_idx = sim[t][:,-1:].squeeze().nonzero()\n",
+    "                maskx = np.squeeze(sim[t][:,-1:]==1)\n",
+    "                x = torch.tensor(sim[t],dtype=torch.float)\n",
     "                \n",
-    "            self.save(data_list, os.path.join(self.processed_data_path,self.processed_file_names[0]))"
+    "                y_abs = torch.tensor(sim[t+1][real_idx,:3],dtype=torch.float).squeeze()\n",
+    "                if self.mode == 'cart':     y = y_abs    \n",
+    "                if self.mode == 'delta':    y = y_abs-x[maskx,:3]\n",
+    "                    \n",
+    "                edge_index = GetEdgeIdx(top[t],real_idx) \n",
+    "                data = Data(pos=x[:,:3],x=x[:,3:],y=y,edge_index=edge_index,mask=maskx,time=t)\n",
+    "                data_list.append(data)\n",
+    "\n",
+    "        if self.pre_transform is not None:\n",
+    "            data_list = [self.pre_transform(data) for data in data_list]        \n",
+    "                \n",
+    "        self.save(data_list, os.path.join(self.processed_data_path,self.processed_file_names[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing...\n",
-      "1700it [00:36, 46.59it/s]\n",
-      "Done!\n",
       "c:\\Users\\Gebruiker\\anaconda3\\envs\\DEM-GNN\\Lib\\site-packages\\torch_geometric\\io\\fs.py:229: UserWarning: Weights only load failed. Please file an issue to make `torch.load(weights_only=True)` compatible in your case. Please use `torch.serialization.add_safe_globals([scalar])` to allowlist this global.\n",
-      "  warnings.warn(f\"{warn_msg} Please use \"\n",
-      "Processing...\n",
-      "200it [00:04, 47.57it/s]\n",
-      "Done!\n",
-      "Processing...\n",
-      "100it [00:02, 46.53it/s]\n",
-      "Done!\n"
+      "  warnings.warn(f\"{warn_msg} Please use \"\n"
      ]
     }
    ],
@@ -168,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +173,7 @@
     "        self.conv1 = RelPosConv(emb_dim,msg_dim,emb_dim)\n",
     "        self.conv2 = RelPosConv(emb_dim,msg_dim,emb_dim)\n",
     "        self.conv3 = RelPosConv(emb_dim,msg_dim,out_dim)\n",
+    "        self.mode = \"delta\"\n",
     "\n",
     "    def forward(self,data):\n",
     "        x, edge_attr, edge_index = data.x, data.edge_attr, data.edge_index\n",
@@ -222,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,18 +265,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_train[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device:  cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Gebruiker\\anaconda3\\envs\\DEM-GNN\\Lib\\site-packages\\torch_geometric\\deprecation.py:26: UserWarning: 'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
+      "  warnings.warn(out)\n"
+     ]
+    }
+   ],
    "source": [
     "model = GCONV_Model_RelPos()\n",
     "trainer = Trainer(model, dataset_train,dataset_val,\n",
@@ -321,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,17 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_test_start[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from Encoding import ToPytorchData\n",
-    "from Plotting import PlotGraph\n",
     "\n",
     "def GetLimits(data):\n",
     "    max = [torch.max(data.x[:,i]) for i in [0, 1, 2]]\n",
@@ -356,42 +321,7 @@
     "    max = torch.stack(max)\n",
     "    min = torch.stack(min)\n",
     "    limits = torch.stack([min,max],dim=1)\n",
-    "    return limits\n",
-    "\n",
-    "def Rollout(model,data_agr,bc_agr,i: int,model_name: str,timesteps: int,plot_graph: bool,\n",
-    "            device: Literal[\"cuda\",\"cpu\"],\n",
-    "            mode: Literal[\"cart\",\"delta\"]):\n",
-    "    model.load_state_dict(torch.load(f\"{os.getcwd()}\\\\Models\\\\{model_name}\",weights_only=True))\n",
-    "    model.eval()\n",
-    "    with torch.inference_mode():\n",
-    "        #par_t = np.copy(data_start[i])\n",
-    "        mask = data_agr[i][0][:,-1] == 1\n",
-    "        par_t = np.copy(data_agr[i][0][mask,:6])\n",
-    "        ML_rollout = np.zeros((timesteps+1,par_t.shape[0],par_t.shape[1]))\n",
-    "        ML_rollout[0] = par_t\n",
-    "\n",
-    "        bc = np.copy(bc_agr[i])\n",
-    "        bc_t = np.copy(bc)\n",
-    "        bc_rollout = np.zeros((timesteps+1,6,9))\n",
-    "        bc_rollout[0] = bc_t\n",
-    "\n",
-    "        for t in tqdm(range(timesteps)):\n",
-    "            bc_t[:,:3] = bc[:,:3]+(t+2)*bc[:,-3:]                      # Update BC's\n",
-    "            data = ToPytorchData(par_t,bc_t,tol=0.1)\n",
-    "            data = transform(data)\n",
-    "            if t == 0: limits = GetLimits(data)\n",
-    "            if plot_graph==True: PlotGraph(data,limits,manual_axes=False,plot_lines=False) \n",
-    "            data.to(device)\n",
-    "            model.to(device)\n",
-    "            out = model(data)\n",
-    "            if mode == \"cart\":\n",
-    "                par_t[:,:3] = np.array(out[data.mask])\n",
-    "            if mode == \"delta\":\n",
-    "                par_t[:,:3] = par_t[:,:3]+np.array(out[data.mask])\n",
-    "            ML_rollout[t+1] = par_t\n",
-    "\n",
-    "            bc_rollout[t+1] = bc_t\n",
-    "        return bc_rollout, ML_rollout"
+    "    return limits\n"
    ]
   },
   {
@@ -400,54 +330,142 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Encoding import Encoding, ConstructTopology, EncodeNodes\n",
-    "\n",
     "class LearnedSimulator:\n",
-    "    def __init__(self,model,dataset_name: str,bc_agr,data_agr,i: int,timesteps,):\n",
-    "        self.bc = bc_agr[i]\n",
-    "        self.par_data = data_agr[i]\n",
-    "        self.model, self.dataset_name = model, dataset_name\n",
-    "        self.length = len(self.par_data)\n",
-    "        self.data_list = []\n",
-    "\n",
     "    @property\n",
     "    def BCrollout(self):\n",
-    "        bc_rollout = []\n",
+    "        print(\"Calculating BC\")\n",
+    "        bc_rollout = np.empty((self.timesteps,6,9))\n",
     "        bc_t=np.copy(self.bc)\n",
     "        for t in range(self.timesteps):\n",
     "            bc_t[:,:3] = self.bc[:,:3]+(t+1)*self.bc[:,-3:] \n",
-    "            bc_rollout.append(bc_t)\n",
+    "            bc_rollout[t] = bc_t\n",
     "        return bc_rollout\n",
+    "    \n",
+    "    def __init__(self,model,data_agr, top_agr,bc_agr,i: int,tol,timesteps=100):\n",
+    "        self.device = torch.device('cuda' if torch.cuda.is_available()else 'cpu')\n",
+    "        self.bc = bc_agr[i]\n",
+    "        self.par_data = data_agr[i]\n",
+    "        self.topology = top_agr[i]\n",
+    "        self.model = model.to(self.device)\n",
+    "        self.data_list = []\n",
+    "        self.timesteps = timesteps\n",
+    "        self.tol = tol\n",
+    "        self.bc_rollout = self.BCrollout\n",
     "\n",
-    "    def Rollout(self):\n",
-    "        bc_rollout = self.BCrollout(self)\n",
-    "        for t in trange(self.timesteps)\n",
-    "            ConstructTopology(self.par_data,bc_rollout,self.tol)\n",
-    "            data_enc, top_enc =  Encoding(self.bc,top)\n"
+    "    @property\n",
+    "    def GroundTruth(self):\n",
+    "        GroundTruth = np.empty((self.timesteps),dtype=object)\n",
+    "        for t in trange(self.timesteps):\n",
+    "            data = ToPytorchData(self.par_data[t],self.bc_rollout[t],self.tol,self.topology[t])[0]\n",
+    "            GroundTruth[t] = data\n",
+    "        return GroundTruth\n",
+    "\n",
+    "    @property\n",
+    "    def ML_Rollout(self):\n",
+    "        with torch.inference_mode():\n",
+    "            \n",
+    "            ML_Rollout = np.empty((self.timesteps),dtype=object)\n",
+    "            par_inp = self.par_data[0]\n",
+    "            ML_Rollout[0] = ToPytorchData(par_inp,self.bc_rollout[0],self.tol)[0]\n",
+    "\n",
+    "            for t in tqdm(range(1,self.timesteps)):\n",
+    "                input_data, MatlabTopology = ToPytorchData(par_inp,self.bc_rollout[t],self.tol)\n",
+    "                if self.model.mode == 'delta': transform = T.Cartesian(norm=False)\n",
+    "                input_data.to(self.device)\n",
+    "\n",
+    "                output = self.model(transform(input_data))\n",
+    "                par_inp[:,:3] = par_inp[:,:3]+output[input_data.mask].cpu().numpy()\n",
+    "                output_data = ToPytorchData(par_inp,self.bc_rollout[t],self.tol,MatlabTopology)\n",
+    "                ML_Rollout[t] = output_data[0]\n",
+    "\n",
+    "        return ML_Rollout\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rol1 = Rollout(GCONV_Model_RelPos(),\"2Sphere\",1,100)\n",
-    "rol1.i2"
+    "def GetModel(dataset_name,model_name):\n",
+    "    model = GCONV_Model_RelPos()\n",
+    "    model.load_state_dict(torch.load(f\"{os.getcwd()}\\\\Models\\\\{dataset_name}_GCONV_Model_{model_name}\"))\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating BC\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 1896.18it/s]\n",
+      "100%|██████████| 99/99 [00:00<00:00, 133.08it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from Encoding import load\n",
-    "data_start,data_agr,top_agr,bc_agr = load(file_name)\n",
-    "float_formatter = \"{:.2f}\".format\n",
-    "np.set_printoptions(precision=1)\n",
-    "print(rol1.bc.shape)\n",
-    "top_agr[0][0]"
+    "\n",
+    "dataset_name = \"2Sphere\"\n",
+    "model_name = \"RelPos_02\"\n",
+    "model = GetModel(dataset_name,model_name)\n",
+    "AggregatedArgs = load(dataset_name)\n",
+    "rol1 = LearnedSimulator(model,\n",
+    "                        *AggregatedArgs,i=0,tol=0.1)\n",
+    "\n",
+    "GroundTruth = rol1.GroundTruth\n",
+    "ML_Rollout = rol1.ML_Rollout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Plotting import PlotGraph\n",
+    "for t in trange(rol1.timesteps):  \n",
+    "    if t % 10 == 0: PlotGraph(ML_Rollout[t], plot_lines=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DataListToPositionArray(ML_Rollout):\n",
+    "    ML_Real_pos = np.zeros((100,2,3))\n",
+    "    for t,data in enumerate(ML_Rollout):\n",
+    "        ML_Real_pos[t] = data.pos[data.mask]\n",
+    "    return ML_Real_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Plotting import PlotXYZ\n",
+    "data_agr = AggregatedArgs[0]\n",
+    "fig, axes = plt.subplots(1,3,sharey=True)\n",
+    "fig.set_figwidth(19)\n",
+    "t_max = 100\n",
+    "for i, ax in enumerate(axes):   \n",
+    "    PlotXYZ(rol1.bc_rollout,data_agr[0][:t_max],ML_Real_pos[:t_max], i,ax)\n",
+    "    ax.set_xlim(xmin=0,xmax=t_max)"
    ]
   },
   {
@@ -464,21 +482,6 @@
     "bc_rollout, ML_rollout = Rollout(model,\n",
     "                                 data_agr,\n",
     "                                 bc_agr,-5,model_name,100,False,\"cpu\",\"delta\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Plotting import PlotXYZ\n",
-    "fig, axes = plt.subplots(1,3,sharey=True)\n",
-    "fig.set_figwidth(19)\n",
-    "t_max = 100\n",
-    "for i, ax in enumerate(axes):   \n",
-    "    PlotXYZ(bc_rollout,data_agr[0][:t_max],ML_rollout[:t_max], i,ax)\n",
-    "    ax.set_xlim(xmin=0,xmax=t_max)"
    ]
   }
  ],
