--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -26,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +46,8 @@
     "    def __init__(self,file_name: str,data_split,\n",
     "                 Dataset_type: Literal[\"train\",\"validate\",\"test\"],\n",
     "                 mode: Literal[\"cart\",\"delta\"],\n",
-    "                 root: str = os.getcwd()+r\"\\Data\", \n",
-    "                 force_reload=False,transform=None, pre_transform=None, pre_filter=None):\n",
+    "                 force_reload=False,pre_transform=None, transform=None, pre_filter=None,\n",
+    "                 root: str = os.getcwd()+r\"\\Data\"):\n",
     "        \n",
     "        self.raw_data_path = f\"{root}\\\\raw\"\n",
     "        self.processed_data_path = f\"{root}\\\\processed\"\n",
@@ -98,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,20 +256,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def GetScales(dataset):\n",
+    "    scale_pos = 1.0/dataset.pos.abs().max()\n",
+    "    scale_x = 1/dataset.x.max(dim=0,keepdim=False)[0]\n",
+    "    return scale_pos,scale_x\n",
+    "\n",
+    "def NormalizePos(dataset,scale_pos=None,scalex=None):\n",
+    "    if scale_pos is None:\n",
+    "        scale_pos = 1.0/dataset.pos.abs().max()\n",
+    "    \n",
+    "    if scalex is None:\n",
+    "        scalex = 1/dataset.x.max(dim=0,keepdim=False)[0]\n",
+    "\n",
+    "    assert dataset.pos is not None\n",
+    "    dataset.pos *= scale_pos\n",
+    "    dataset.x *= scalex\n",
+    "    return dataset, scale_pos, scalex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.transforms import BaseTransform\n",
+    "class NormalizePos(BaseTransform):\n",
+    "    r\"\"\"Centers and normalizes node positions to the interval :math:`(-1, 1)`\n",
+    "    (functional name: :obj:`normalize_scale`).\n",
+    "    \"\"\"\n",
+    "    def __init__(self,scale_pos,scale_x) -> None:\n",
+    "        self.scale_pos = scale_pos\n",
+    "        self.scale_x = scale_x\n",
+    "\n",
+    "    def forward(self, data: Data) -> Data:\n",
+    "        assert data.pos is not None\n",
+    "        data.pos *= self.scale_pos\n",
+    "\n",
+    "        assert data.x is not None\n",
+    "        data.x *= self.scale_x\n",
+    "\n",
+    "        return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device:  cuda\n"
+     ]
+    }
+   ],
+   "source": [
     "transform_norm = T.Compose([T.NormalizeScale(),T.Cartesian(False)])\n",
     "transform_eq = T.Cartesian(False)\n",
     "transform_dist = T.Compose([T.Cartesian(False), T.Distance(norm=False,cat=True)])\n",
+    "transform_norm = T.Compose([T.NormalizeScale(),T.Cartesian(False),T.Distance(norm=False,cat=True)])\n",
     "\n",
     "file_name=\"N400\"\n",
     "data_split=[0.85, 0.95]\n",
-    "transform = transform_dist\n",
-    "force_reload = True\n",
-    "train = False\n",
+    "pre_transform = T.Center()\n",
+    "transform= \n",
+    "force_reload = False\n",
+    "train = True\n",
     "\n",
     "if train == True:\n",
-    "    dataset_train     = DEM_Dataset(file_name, data_split,\"train\"   ,'delta', pre_transform=transform,force_reload=force_reload)\n",
-    "    dataset_val       = DEM_Dataset(file_name, data_split,\"validate\",'delta', pre_transform=transform,force_reload=force_reload)\n",
-    "    dataset_test      = DEM_Dataset(file_name, data_split,\"test\"    ,'delta', pre_transform=transform,force_reload=force_reload)\n",
+    "    dataset_train     = DEM_Dataset(file_name, data_split,\"train\"   ,'delta',force_reload, pre_transform,transform)\n",
+    "    dataset_val      = DEM_Dataset(file_name, data_split,\"validate\",'delta', force_reload, pre_transform=pre_transform,force_reload=force_reload)\n",
+    "    dataset_test      = DEM_Dataset(file_name, data_split,\"test\"    ,'delta', force_reload, pre_transform=pre_transform,force_reload=force_reload)\n",
     "\n",
     "    model = GetModel(\"N400\",\"RelPos_03\",edge_dim=4)\n",
     "    trainer = Trainer(model, dataset_train,dataset_val,\n",
@@ -266,7 +336,108 @@
     "                    lr=0.00000001,\n",
     "                    epochs=2000,\n",
     "                    model_name=f\"{file_name}_GCONV_Model_RelPos_03\")\n",
-    "    trainer.train_loop()"
+    "    #trainer.train_loop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = NormalizePos()\n",
+    "transform = T.Cartesian(False)\n",
+    "dataset_train.data = transform(dataset_train.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(x=[592, 7], edge_index=[2, 1910], y=[400, 3], pos=[592, 3], time=0, mask=[592])"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_train[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(-0.9869) tensor(1.)\n",
+      "tensor(-3.0119) tensor(2.9456)\n",
+      "tensor(-2.9407) tensor(2.9503)\n",
+      "tensor([3.9737e-01, 9.9736e+04, 4.4934e-01, 1.0000e+00, 1.0000e+00, 1.0000e+00,\n",
+      "        1.0000e+00])\n",
+      "tensor([3.9310e-01, 9.7377e+04, 4.4945e-01, 1.0000e+00, 1.0000e+00, 1.0000e+00,\n",
+      "        1.0000e+00])\n",
+      "tensor([3.8836e-01, 9.8770e+04, 4.3186e-01, 1.0000e+00, 1.0000e+00, 1.0000e+00,\n",
+      "        1.0000e+00])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset_train.pos.min(),dataset_train.pos.max())\n",
+    "print(dataset_val.pos.min(),dataset_val.pos.max())\n",
+    "print(dataset_test.pos.min(),dataset_test.pos.max())\n",
+    "\n",
+    "print(dataset_train.x.max(dim=0)[0])\n",
+    "print(dataset_val.x.max(dim=0)[0])\n",
+    "print(dataset_test.x.max(dim=0)[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_train, scale_pos,scalex    = NormalizePos(dataset_train)\n",
+    "dataset_val                        = NormalizePos(dataset_val,scale_pos,scalex)[0]\n",
+    "dataset_test                       = NormalizePos(dataset_test,scale_pos,scalex)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(-0.9869) tensor(1.)\n",
+      "tensor(-0.9751) tensor(0.9537)\n",
+      "tensor(-0.9520) tensor(0.9552)\n",
+      "tensor([1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000])\n",
+      "tensor([0.9893, 0.9763, 1.0002, 1.0000, 1.0000, 1.0000, 1.0000])\n",
+      "tensor([0.9773, 0.9903, 0.9611, 1.0000, 1.0000, 1.0000, 1.0000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset_train.pos.min(),dataset_train.pos.max())\n",
+    "print(dataset_val.pos.min(),dataset_val.pos.max())\n",
+    "print(dataset_test.pos.min(),dataset_test.pos.max())\n",
+    "\n",
+    "print(dataset_train.x.max(dim=0)[0])\n",
+    "print(dataset_val.x.max(dim=0)[0])\n",
+    "print(dataset_test.x.max(dim=0)[0])"
    ]
   },
   {
@@ -329,10 +500,10 @@
     "            \n",
     "            ML_Rollout = np.empty((self.timesteps),dtype=object)\n",
     "            par_inp = self.par_data[0]\n",
-    "            ML_Rollout[0] = ToPytorchData(par_inp,self.BC_rollout[0],self.tol)[0]\n",
+    "            ML_Rollout[0], MatlabTopology = ToPytorchData(par_inp,self.BC_rollout[0],self.tol)\n",
     "\n",
     "            for t in tqdm(range(1,self.timesteps)):\n",
-    "                input_data, MatlabTopology = ToPytorchData(par_inp,self.BC_rollout[t],self.tol)\n",
+    "                input_data = ToPytorchData(par_inp,self.BC_rollout[t],self.tol,MatlabTopology)[0]\n",
     "                if self.model.mode == 'delta': \n",
     "                    #transform = T.Compose([T.Cartesian(False), T.Distance(norm=False,cat=True)])\n",
     "                    transform = T.Cartesian(False)\n",
@@ -380,12 +551,15 @@
    "source": [
     "dataset_name = \"2Sphere\"\n",
     "model_name = \"RelPos_02\"\n",
-    "sample_idx = 0\n",
-    "tol = 0.1\n",
+    "tol = 0.5\n",
+    "from Plotting import PlotXYZ\n",
+    "for sample_idx in range (30):\n",
+    "    model = GetModel(dataset_name,model_name,edge_dim=3)\n",
+    "    AggregatedArgs = SplitData(dataset_name,data_split)\n",
+    "    Rollout = LearnedSimulator(model,*AggregatedArgs,i=sample_idx,tol=tol,timesteps=100)\n",
     "\n",
-    "model = GetModel(dataset_name,model_name,edge_dim=3)\n",
-    "AggregatedArgs = SplitData(dataset_name,data_split)\n",
-    "Rollout = LearnedSimulator(model,*AggregatedArgs,i=sample_idx,tol=tol,timesteps=100)"
+    "    if dataset_name == \"2Sphere\": \n",
+    "        PlotXYZ(Rollout,t_max=100)"
    ]
   },
   {
@@ -394,9 +568,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Plotting import PlotXYZ\n",
-    "if dataset_name == \"2Sphere\": \n",
-    "    PlotXYZ(Rollout,t_max=100)"
+    "from Plotting import GetInternalStressRollout\n",
+    "stress = GetInternalStressRollout(Rollout)\n",
+    "torch.set_printoptions(4)\n",
+    "print(\"Stress at time 0\")\n",
+    "print(torch.round(stress[0],decimals=8)),\n",
+    "print(\"\\nStress at time 99\")\n",
+    "print(torch.round(stress[-1],decimals=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Plotting import PlotContactVectorAndForce, GetAllContactpoints,AxesLimits\n",
+    "data = Rollout.GroundTruth[0]\n",
+    "BC = Rollout.BC_rollout[3]\n",
+    "fig,axs = PlotContactVectorAndForce(data,BC)\n",
+    "for ax in axs: AxesLimits(ax,BC)"
    ]
   },
   {
@@ -429,6 +620,7 @@
     "\n",
     "#datalist = Rollout.ML_rollout\n",
     "#gifname = f\"ML_2_{sample_idx}_Tol{str(tol)[2:]}\"\n",
+    "gifname = \"Test\"\n",
     "datalist = Rollout.GroundTruth\n",
     "gifname = f\"Groundtruth_2_{sample_idx}_Tol{str(tol)[2:]}\"\n",
     "MakeGIF(datalist,gifname,fps=8,color='lightblue',deformation=True)\n",
@@ -446,29 +638,6 @@
    "source": [
     "data = Rollout.ML_rollout[0]\n",
     "#data = Rollout.GroundTruth[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Plotting import GetInternalStressRollout\n",
-    "stress = GetInternalStressRollout(Rollout)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Plotting import PlotContactVectorAndForce, GetAllContactpoints,AxesLimits\n",
-    "data = Rollout.GroundTruth[0]\n",
-    "BC = Rollout.BC_rollout[3]\n",
-    "fig,axs = PlotContactVectorAndForce(data,BC)\n",
-    "for ax in axs: AxesLimits(ax,BC)"
    ]
   }
  ],
