--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20,9 +20,9 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "from torch_geometric.data import Batch, Data, DataLoader, InMemoryDataset\n",
-    "from torch_geometric.nn import MessagePassing\n",
-    "import torch_geometric.transforms as T\n",
+    "#from torch_geometric.data import Batch, Data, DataLoader, InMemoryDataset\n",
+    "#from torch_geometric.nn import MessagePassing\n",
+    "#import torch_geometric.transforms as T\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -591,7 +591,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DEM-GNN",
+   "display_name": "DEM-GNN2",
    "language": "python",
    "name": "python3"
   },
@@ -605,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
