Fixed transform in Dataset

--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -204,7 +204,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.transforms import BaseTransform\n",
+    "class NormalizePos(BaseTransform):\n",
+    "    r\"\"\"Centers and normalizes node positions to the interval :math:`(-1, 1)`\n",
+    "    (functional name: :obj:`normalize_scale`).\n",
+    "    \"\"\"\n",
+    "    def __init__(self,file_name):\n",
+    "        self.path_scale_pos = os.path.join(os.getcwd(),\"Data\",\"processed\",f\"{file_name}_scale_pos.pt\")\n",
+    "        self.path_scale_x   = os.path.join(os.getcwd(),\"Data\",\"processed\",f\"{file_name}_scale_x.pt\")\n",
+    "        self.scale_pos = torch.load(self.path_scale_pos)\n",
+    "        self.scale_x   = torch.load(self.path_scale_x)\n",
+    "    def forward(self, data: Data) -> Data:\n",
+    "        data.pos *= self.scale_pos\n",
+    "        data.x   *= self.scale_x\n",
+    "\n",
+    "        return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,6 +291,7 @@
     "            torch.save(scale_x,os.path.join(self.processed_data_path,f\"{self.file_name}_scale_x.pt\"))\n",
     "\n",
     "        if self.pre_transform is not None:\n",
+    "            self.pre_transform = T.Compose([NormalizePos(self.file_name),self.pre_transform])\n",
     "            data_list = [self.pre_transform(data) for data in tqdm(data_list)]   \n",
     "                \n",
     "        self.save(data_list, os.path.join(self.processed_data_path,self.processed_file_names[0]))"
@@ -275,30 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch_geometric.transforms import BaseTransform\n",
-    "class NormalizePos(BaseTransform):\n",
-    "    r\"\"\"Centers and normalizes node positions to the interval :math:`(-1, 1)`\n",
-    "    (functional name: :obj:`normalize_scale`).\n",
-    "    \"\"\"\n",
-    "    def __init__(self,file_name):\n",
-    "        self.path_scale_pos = os.path.join(os.getcwd(),\"Data\",\"processed\",f\"{file_name}_scale_pos.pt\")\n",
-    "        self.path_scale_x   = os.path.join(os.getcwd(),\"Data\",\"processed\",f\"{file_name}_scale_x.pt\")\n",
-    "        self.scale_pos = torch.load(self.path_scale_pos)\n",
-    "        self.scale_x   = torch.load(self.path_scale_x)\n",
-    "    def forward(self, data: Data) -> Data:\n",
-    "        data.pos *= self.scale_pos\n",
-    "        data.x   *= self.scale_x\n",
-    "\n",
-    "        return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,8 +342,7 @@
     "file_name=\"N400\"\n",
     "model_ident = \"Norm_01\"\n",
     "data_split=[0.85, 0.95]\n",
-    "pre_transform = T.Compose([NormalizePos(file_name),\n",
-    "                           T.Cartesian(False),\n",
+    "pre_transform = T.Compose([T.Cartesian(False),\n",
     "                           T.Distance(norm=False,cat=True)])\n",
     "transform       = None\n",
     "force_reload    = True\n",
