Setup HPC Training

--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -63,13 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class GCONV_Model_RelPos(torch.nn.Module):\n",
     "    def __init__(self, emb_dim=64, msg_dim=64, node_dim=7, edge_dim=4, out_dim = 3):\n",
     "        super(GCONV_Model_RelPos,self).__init__()\n",
+    "        self.emd_dim = emb_dim\n",
+    "        self.msg_dim = msg_dim\n",
+    "        self.node_dim = node_dim\n",
+    "        self.edge_dim = edge_dim\n",
     "        self.node_embed = torch.nn.Linear(node_dim,emb_dim)\n",
     "        self.edge_embed = torch.nn.Linear(edge_dim,emb_dim)\n",
     "        self.conv1 = RelPosConv(emb_dim,msg_dim,emb_dim)\n",
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,13 +225,12 @@
     "    def forward(self, data: Data) -> Data:\n",
     "        data.pos *= self.scale_pos\n",
     "        data.x   *= self.scale_x\n",
-    "\n",
     "        return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
