Shorten test script, fix label encoding

--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -41,268 +41,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RelPosConv(MessagePassing):\n",
-    "    def __init__(self, emb_dim, msg_dim, out_channels, aggr = 'mean'):\n",
-    "        super().__init__(aggr=aggr)\n",
-    "        self.edge_mlp = torch.nn.Linear(emb_dim+emb_dim,msg_dim)\n",
-    "        self.update_mlp = torch.nn.Linear(emb_dim+msg_dim,out_channels)\n",
-    "        self.reset_parameters()\n",
-    "\n",
-    "    def forward(self,x,edge_attr,edge_index):\n",
-    "        out = self.propagate(edge_index,x=x,edge_attr=edge_attr)\n",
-    "        return out\n",
-    "    \n",
-    "    def message(self, x_j, edge_attr):\n",
-    "        tmp = torch.cat([x_j, edge_attr],dim=1)\n",
-    "        return self.edge_mlp(tmp)\n",
-    "    \n",
-    "    def update(self,aggr_out,x):\n",
-    "        cat = torch.cat([x, aggr_out],dim=1)\n",
-    "        return self.update_mlp(cat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class GCONV_Model_RelPos(torch.nn.Module):\n",
-    "    def __init__(self, emb_dim=64, msg_dim=64, node_dim=7, edge_dim=4, out_dim = 3):\n",
-    "        super(GCONV_Model_RelPos,self).__init__()\n",
-    "        self.emd_dim = emb_dim\n",
-    "        self.msg_dim = msg_dim\n",
-    "        self.node_dim = node_dim\n",
-    "        self.edge_dim = edge_dim\n",
-    "        self.node_embed = torch.nn.Linear(node_dim,emb_dim)\n",
-    "        self.edge_embed = torch.nn.Linear(edge_dim,emb_dim)\n",
-    "        self.conv1 = RelPosConv(emb_dim,msg_dim,emb_dim)\n",
-    "        self.conv2 = RelPosConv(emb_dim,msg_dim,emb_dim)\n",
-    "        self.conv3 = RelPosConv(emb_dim,msg_dim,out_dim)\n",
-    "        self.mode = \"delta\"\n",
-    "\n",
-    "    def forward(self,data):\n",
-    "        x, edge_attr, edge_index = data.x, data.edge_attr, data.edge_index\n",
-    "        x = self.node_embed(x)\n",
-    "        edge_attr = self.edge_embed(edge_attr)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.conv1(x, edge_attr, edge_index)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.conv2(x, edge_attr, edge_index)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.conv3(x, edge_attr, edge_index)\n",
-    "        return x"
+    "from ML_functions import DEM_Dataset, Trainer, GetModel"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Trainer:\n",
-    "    def __init__(self,model,dataset_train,dataset_val,batch_size,lr,epochs,model_name,loss_fn=torch.nn.MSELoss()):\n",
-    "        self.model = model\n",
-    "        self.batch_size = batch_size\n",
-    "        self.lr = lr\n",
-    "        self.epochs = epochs\n",
-    "        self.loss_fn = loss_fn\n",
-    "        self.model_name = model_name\n",
-    "\n",
-    "        self.device = torch.device('cuda' if torch.cuda.is_available()else 'cpu')\n",
-    "        print(\"Device: \", self.device)\n",
-    "        self.model.to(self.device)\n",
-    "        self.optimizer = torch.optim.Adam(self.model.parameters(),lr=self.lr)\n",
-    "        self.train_dl = self.make_data_loader(dataset_train, shuffle=True)\n",
-    "        self.val_dl = self.make_data_loader(dataset_val, shuffle=False)\n",
-    "\n",
-    "    def make_data_loader(self, dataset, shuffle):\n",
-    "        return DataLoader(dataset, batch_size=self.batch_size, shuffle=shuffle)\n",
-    "    \n",
-    "    def loss_batch(self, batch,opt=None):\n",
-    "        out = self.model(batch)\n",
-    "        mask = np.concatenate(batch.mask)\n",
-    "        loss =self.loss_fn(out[mask], batch.y)\n",
-    "\n",
-    "        if opt is not None:\n",
-    "            loss.backward()\n",
-    "            opt.step()\n",
-    "            opt.zero_grad()\n",
-    "        return loss.item()\n",
-    "\n",
-    "    def batch_loop(self, dataloader, loss_list, axes, opt=None):\n",
-    "        mean_loss = 0\n",
-    "        for i, batch in enumerate(dataloader):\n",
-    "            batch_loss = self.loss_batch(batch.to(self.device), opt)\n",
-    "            mean_loss += batch_loss\n",
-    "        mean_loss /= i\n",
-    "        loss_list.append(mean_loss)\n",
-    "        axes[0].plot(loss_list)\n",
-    "        axes[1].plot(loss_list[-5:])\n",
-    "        return mean_loss,loss_list\n",
-    "\n",
-    "    def train_loop(self):\n",
-    "        train_loss, val_loss = [], []\n",
-    "        best_model_loss = np.inf\n",
-    "        for epoch in tqdm(range(self.epochs)):\n",
-    "            clear_output(wait=True)\n",
-    "            fig, axes = plt.subplots(1,2)\n",
-    "            fig.set_figwidth(15)\n",
-    "\n",
-    "            self.model.train()  \n",
-    "            mean_train_loss, train_loss = self.batch_loop(self.train_dl,train_loss,axes,self.optimizer)\n",
-    "\n",
-    "            self.model.eval()\n",
-    "            with torch.inference_mode():\n",
-    "                mean_val_loss, val_loss = self.batch_loop(self.val_dl,val_loss,axes)\n",
-    "\n",
-    "            for ax in axes: ax.set(xlabel='Epoch',ylabel='Loss'), ax.set_ylim(ymin=0), ax.set_xlim(xmin=0)\n",
-    "\n",
-    "            plt.show()\n",
-    "\n",
-    "            if mean_val_loss < best_model_loss:\n",
-    "                best_model_loss = mean_val_loss\n",
-    "                torch.save(self.model.state_dict(),os.path.join(os.getcwd(),\"Models\",self.model_name))\n",
-    "\n",
-    "            print(f\"Epoch {epoch}, Mean Train Loss: {mean_train_loss}, Mean Validation Loss: {mean_val_loss}\")\n",
-    "        np.save(f\"{os.getcwd()}\\\\Models\\\\{self.model_name}_Training_Loss\",train_loss)\n",
-    "        np.save(f\"{os.getcwd()}\\\\Models\\\\{self.model_name}_Validation_Loss\",val_loss)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def GetModel(dataset_name,model_name,edge_dim):\n",
-    "    model = GCONV_Model_RelPos(edge_dim=edge_dim)\n",
-    "    try: model.load_state_dict(torch.load(f\"{os.getcwd()}\\\\Models\\\\{dataset_name}_GCONV_Model_{model_name}\"))\n",
-    "    except: print(\"No Trained model\")\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def GetScales(dataset):\n",
-    "    scale_pos = 1.0/dataset.pos.abs().max()\n",
-    "    scale_x = 1/dataset.x.max(dim=0,keepdim=False)[0]\n",
-    "    return scale_pos,scale_x\n",
-    "\n",
-    "def NormalizePos(dataset,scale_pos=None,scalex=None):\n",
-    "    if scale_pos is None:\n",
-    "        scale_pos = 1.0/dataset.pos.abs().max()\n",
-    "    \n",
-    "    if scalex is None:\n",
-    "        scalex = 1/dataset.x.max(dim=0,keepdim=False)[0]\n",
-    "\n",
-    "    assert dataset.pos is not None\n",
-    "    dataset.pos *= scale_pos\n",
-    "    dataset.x *= scalex\n",
-    "    return dataset, scale_pos, scalex"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch_geometric.transforms import BaseTransform\n",
-    "class NormalizePos(BaseTransform):\n",
-    "    r\"\"\"Centers and normalizes node positions to the interval :math:`(-1, 1)`\n",
-    "    (functional name: :obj:`normalize_scale`).\n",
-    "    \"\"\"\n",
-    "    def __init__(self,file_name):\n",
-    "        self.path_scale_pos = os.path.join(os.getcwd(),\"Data\",\"processed\",f\"{file_name}_scale_pos.pt\")\n",
-    "        self.path_scale_x   = os.path.join(os.getcwd(),\"Data\",\"processed\",f\"{file_name}_scale_x.pt\")\n",
-    "        self.scale_pos = torch.load(self.path_scale_pos)\n",
-    "        self.scale_x   = torch.load(self.path_scale_x)\n",
-    "    def forward(self, data: Data) -> Data:\n",
-    "        data.pos *= self.scale_pos\n",
-    "        data.x   *= self.scale_x\n",
-    "        return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Encoding import ConstructTopology, ToPytorchData\n",
-    "class DEM_Dataset(InMemoryDataset):\n",
-    "    def __init__(self,file_name: str,data_split,\n",
-    "                 Dataset_type: Literal[\"train\",\"validate\",\"test\"],\n",
-    "                 mode: Literal[\"cart\",\"delta\"],\n",
-    "                 force_reload=False,pre_transform=None, transform=None, pre_filter=None,\n",
-    "                 root: str = os.getcwd()+r\"\\Data\"):\n",
-    "        \n",
-    "        self.raw_data_path = f\"{root}\\\\raw\"\n",
-    "        self.processed_data_path = f\"{root}\\\\processed\"\n",
-    "        self.file_name = file_name\n",
-    "        self.Dataset_type = Dataset_type\n",
-    "        self.mode = mode\n",
-    "        self.data_split = data_split\n",
-    "        super().__init__(root, transform, pre_transform,pre_filter,force_reload=force_reload)\n",
-    "        self.load(os.path.join(self.processed_data_path,self.processed_file_names[0]))\n",
-    "\n",
-    "    @property \n",
-    "    def raw_file_names(self):\n",
-    "        return[f\"{self.file_name}_Data.npy\",\n",
-    "               f\"{self.file_name}_Topology.npy\",\n",
-    "               f\"{self.file_name}_BC.npy\"]\n",
-    "    \n",
-    "    @property\n",
-    "    def processed_file_names(self):\n",
-    "        if self.pre_filter is None: return [f\"{self.file_name}_{self.mode}_{self.Dataset_type}.pt\"]\n",
-    "        else: return [f\"{self.file_name}_{self.mode}_{self.Dataset_type}_init.pt\"]\n",
-    "    \n",
-    "    def download(self):\n",
-    "        pass\n",
-    "    \n",
-    "    # Load data and split them according to dataset split\n",
-    "    def LoadSimTop(self,i):\n",
-    "        data = np.load(f\"{self.raw_data_path}\\\\{self.raw_file_names[i]}\",allow_pickle=True)\n",
-    "        Daset_type_idx = {\"train\":0,\"validate\":1,\"test\":2}[self.Dataset_type]\n",
-    "        splits=np.array(self.data_split)*data.shape[0]\n",
-    "        return np.split(data,splits.astype(int))[Daset_type_idx]\n",
-    "\n",
-    "    def process(self):\n",
-    "        data_list = []\n",
-    "        data_agr,top_agr,bc= [self.LoadSimTop(i) for i in [0,1,2]]\n",
-    "            \n",
-    "        if self.pre_filter is not None:\n",
-    "            simulations = self.pre_filter(simulations)\n",
-    "\n",
-    "        for sim, bc in tqdm(zip(data_agr,bc)):\n",
-    "            R_avg = sim[0][:,3].mean()\n",
-    "            topology = ConstructTopology(sim[0],bc,6*R_avg)-1\n",
-    "            for t in np.arange(len(sim)-1):\n",
-    "                par_data = sim[t]\n",
-    "                label_data = sim[t+1]\n",
-    "                data = ToPytorchData(par_data,bc,None,topology,label_data)[0]\n",
-    "                data_list.append(data)\n",
-    "\n",
-    "        if self.Dataset_type == \"train\":\n",
-    "            scale_pos, scale_x = GetScales(Batch.from_data_list(data_list))\n",
-    "            torch.save(scale_pos,os.path.join(self.processed_data_path,f\"{self.file_name}_scale_pos.pt\"))\n",
-    "            torch.save(scale_x,os.path.join(self.processed_data_path,f\"{self.file_name}_scale_x.pt\"))\n",
-    "\n",
-    "        if self.pre_transform is not None:\n",
-    "            self.pre_transform = T.Compose([NormalizePos(self.file_name),self.pre_transform])\n",
-    "            data_list = [self.pre_transform(data) for data in tqdm(data_list)]   \n",
-    "                \n",
-    "        self.save(data_list, os.path.join(self.processed_data_path,self.processed_file_names[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -312,32 +56,11 @@
       "c:\\Users\\20182319\\AppData\\Local\\anaconda3\\envs\\DEM-GNN2\\Lib\\site-packages\\torch_geometric\\data\\dataset.py:240: UserWarning: The `pre_transform` argument differs from the one used in the pre-processed version of this dataset. If you want to make use of another pre-processing technique, pass `force_reload=True` explicitly to reload the dataset.\n",
       "  warnings.warn(\n",
       "Processing...\n",
-      "289it [00:38,  7.59it/s]\n",
-      "Done!\n",
-      "c:\\Users\\20182319\\AppData\\Local\\anaconda3\\envs\\DEM-GNN2\\Lib\\site-packages\\torch_geometric\\io\\fs.py:229: UserWarning: Weights only load failed. Please file an issue to make `torch.load(weights_only=True)` compatible in your case. Please use `torch.serialization.add_safe_globals([scalar])` to allowlist this global.\n",
-      "  warnings.warn(f\"{warn_msg} Please use \"\n",
-      "Processing...\n",
-      "34it [00:02, 11.79it/s]\n",
-      "Done!\n",
-      "Processing...\n",
-      "18it [00:01, 10.28it/s]\n",
-      "Done!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No Trained model\n",
-      "Device:  cuda\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\20182319\\AppData\\Local\\anaconda3\\envs\\DEM-GNN2\\Lib\\site-packages\\torch_geometric\\deprecation.py:26: UserWarning: 'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
-      "  warnings.warn(out)\n"
+      "18it [00:03,  5.78it/s]\n",
+      "100%|██████████| 1782/1782 [00:01<00:00, 1543.25it/s]\n",
+      " 66%|██████▌   | 1168/1782 [00:17<00:00, 1376.10it/s]Done!\n",
+      "c:\\Users\\20182319\\AppData\\Local\\anaconda3\\envs\\DEM-GNN2\\Lib\\site-packages\\torch_geometric\\io\\fs.py:229: UserWarning: Weights only load failed. Please file an issue to make `torch.load(weights_only=True)` compatible in your case. Please use `torch.serialization.add_safe_globals([_reconstruct])` to allowlist this global.\n",
+      "  warnings.warn(f\"{warn_msg} Please use \"\n"
      ]
     }
    ],
@@ -348,14 +71,15 @@
     "pre_transform = T.Compose([T.Cartesian(False),\n",
     "                           T.Distance(norm=False,cat=True)])\n",
     "transform       = None\n",
-    "force_reload    = True\n",
-    "train           = True\n",
+    "force_reload    = False\n",
+    "train           = False\n",
+    "\n",
+    "\n",
+    "#dataset_train     = DEM_Dataset(file_name, data_split,\"train\"   ,'delta', force_reload, pre_transform,transform)\n",
+    "#dataset_val       = DEM_Dataset(file_name, data_split,\"validate\",'delta', force_reload, pre_transform,transform)\n",
+    "dataset_test      = DEM_Dataset(file_name, data_split,\"test\"    ,'delta', force_reload, pre_transform,transform)\n",
     "\n",
     "if train == True:\n",
-    "    dataset_train     = DEM_Dataset(file_name, data_split,\"train\"   ,'delta', force_reload, pre_transform,transform)\n",
-    "    dataset_val       = DEM_Dataset(file_name, data_split,\"validate\",'delta', force_reload, pre_transform,transform)\n",
-    "    dataset_test      = DEM_Dataset(file_name, data_split,\"test\"    ,'delta', force_reload, pre_transform,transform)\n",
-    "\n",
     "    model = GetModel(\"N400\",model_ident,edge_dim=4)\n",
     "    trainer = Trainer(model, dataset_train,dataset_val,\n",
     "                      batch_size=32,\n",
