Fixed Print in Training loop

--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -299,29 +299,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 1.4628e-07, -9.3682e-02,  3.7360e-01],\n",
-       "        [-1.3959e-07, -9.3682e-02, -3.7360e-01],\n",
-       "        [ 3.7473e-01, -9.3682e-02,  3.7360e-01],\n",
-       "        [ 1.4628e-07,  2.8105e-01,  3.7360e-01],\n",
-       "        [ 1.4628e-07, -9.3682e-02,  7.4721e-01],\n",
-       "        [-1.3959e-07,  2.8105e-01, -3.7360e-01],\n",
-       "        [-3.7473e-01, -9.3682e-02, -3.7360e-01],\n",
-       "        [-1.3959e-07, -9.3682e-02, -7.4721e-01]], dtype=torch.float64)"
+       "Data(x=[8, 7], edge_index=[2, 8], pos=[8, 3], mask=[8], edge_mask=[8], y=[2, 3], edge_attr=[8, 4])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset_test[0].pos"
+    "data = dataset_test[0]\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.8917, 0.8917, 0.4447, 0.4447, 0.4459, 0.4447, 0.4447, 0.4459],\n",
+       "       dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Evaluation import GetGamma\n",
+    "gamma = GetGamma(data)\n",
+    "gamma"
    ]
   },
   {
